--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
+  camera: ^0.10.5+9
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
