--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -25,3 +26,10 @@ flutter:
   # แนะนำให้ประกาศทั้งโฟลเดอร์รูปภาพ
   assets:
     - assets/images/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/images/EXAM-Logo.png   # ใช้ไฟล์นี้ทำทุกขนาด
+  min_sdk_android: 21
+  remove_alpha_ios: true
